Replace separate process with a JUL handler in `BufferSizePropertyClampTest`